# hakoniwa

./: README.md  pyproject.toml  setup.cfg  whitelist.txt
hakoniwa/: __init__.py  _version.py  constants.py  exceptions.py  handlers.py  httputils.py  impl_lambda.py  impl_magichttp.py  requests.py  responses.py  security.py  utils.py  web.py
