[tool.poetry]
name = "hakoniwa"
version = "0.1.0"
description = "Hakoniwa is a simple asyncio framework for asyncio."
authors = ["Kaede Hoshikawa <futursolo@icloud.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"

# Dictionary
magicdict = "^1.0.6"

# Http
magichttp = "^1.1.1"
hiyori = "^0.1.3"

# Templating Engine
sketchbook = "^0.2.1"

# Routing
destination = "^1.2.1"

# Typing
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
# Sort imports
isort = "^5.8.0"
flake8-isort = "^4.0.0"

# Auto formatting
black = "^20.8b1"
flake8-black = "^0.2.1"

# Typing
mypy = "^0.812"

# Linters
flake8 = "^3.9.0"

# Enforce docstring for public classes and functions
flake8-docstrings = "^1.6.0"

# Enforce snake_case
pep8-naming = "^0.11.1"

# Version check
flake8-2020 = "^1.6.0"

# Detect potentially buggy functions
flake8-bugbear = "^21.3.2"

# No builtin names
flake8-builtins = "^1.5.3"

# No old style formatting
flake8-pep3101 = "^1.3.0"

# More readable names
flake8-variables-names = "^0.0.4"

# Simplify Logic
flake8-simplify = "^0.14.0"

# Dictionary
flake8-spellcheck = "^0.24.0"

[tool.black]
line-length = 79
target-version = ['py38']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
